# python_types

./: .gitignore  pyproject.toml
alias/: alias.py
any_vs_object/: any_vs_object.py
basic_type/: functions.py  special.py  variables.py
callable/: callable.py
cast/: cast.py
generic/: bound.py  class.py  function.py  function_correct.py
guard/: guard.py
inference/: inference.py
literal/: literal.py  template-literal.ts
narrowing/: narrowing.py
new_type/: new_type.py
overloading/: overloading.py
stubs/: stubs.py
typed_dict/: typed_dict.py
