[tool.poetry]
name = "types"
version = "0.1.0"
description = ""
authors = ["Vlad Ioffe <vlio20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
boto3 = "^1.26.26"
typing-extensions = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

